# cursor-claw

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
agent-clis/rednote/: SKILL.md  config.json  pyproject.toml
agent-clis/rednote/rednote_cli/: __init__.py  cli.py  config.py  db.py  fetcher.py
cursor_claw/: __init__.py  agent_runner.py  app.py  cli.py  config.py  media.py  prompt.py  store.py  stream_parse.py
cursor_claw/channels/: __init__.py  base.py  mattermost.py  qq.py  telegram.py
cursor_claw/templates/: AGENT.md  MEMORY.md  SOUL.md
docs/channels/: QQ.md  mattermost.md  telegram.md
docs/skills/: rednote-cli.md
scripts/: docs-list.js  notes_db.py
tests/: test_config.py  test_dm_allow.py  test_emoji_normalize.py  test_prompt.py  test_store.py  test_stream_parse.py
