[project]
name = "rednote-cli"
version = "0.1.0"
description = "CLI tool to fetch and locally search Xiaohongshu (RedNote) notes."
authors = [
    { name = "wenmin-wu", email = "wuwenmin1991@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "loguru>=0.7.3",
    "playwright>=1.44.0",
    "typer>=0.12.0",
]

[project.scripts]
rednote-cli = "rednote_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rednote_cli"]
